--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,13 @@
     margin: 0;
     padding: 0;
     color: #fff;
+    list-style: none;
 }
 body {
     background: linear-gradient(
     90deg,
-    rgb(108, 90, 223) 0%,
-    rgba(100, 115, 255, 1) 100%
+    rgb(248, 248, 250) 0%,
+    rgb(249, 250, 252) 100%
   );
 }
 .todo-app {
@@ -22,28 +23,50 @@ body {
    border-radius: 10px;
    padding-bottom: 32px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-   text-align: center;
 }
 h1 {
     margin: 32px 0;
     color: #fff;
     font-size: 24px;
+    text-align: center;
 }
-.weeksDayNames-btn {
+.weeksDayNames {
     margin: 32px 0;
     font-weight: 400;
     color: #fff;
     font-size: 24px;
     text-align: center;
+    list-style: none;
+    
 }
 .btn {
-    width: 250px;
-    height: 50px;
+  text-align: center;
     margin-top: 50px;
-    color: #fff;
+    height: 50px;
+    width: 250px;
     background: linear-gradient(
     90deg,
     rgba(93, 12, 255, 1) 0%,
     rgba(155, 0, 250, 1) 100%
   );
+  display: flex;
+  position: relative;
+  text-align: center;
+  cursor: pointer;
+};
+
+.weeksDayNames .btn:hover span {
+  font-size: 16px;
+  font-weight: 600;
+  z-index: 1; 
+  text-align: center;
 }
+
+ .weeksDayNames .btn span {
+   flex: 1;
+  z-index: 1000;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+} 
